# serializer version: 1
# name: test_allof_inheritance_full_generation[allof_animals_models]
  '''
  # Generated by pyoas — do not edit manually. spec: bc325c1c
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Animal
  
  
  class Dog(Animal):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      breed: str | None = Field(default=None, description='Dog breed')
  
  
  '''
# ---
# name: test_allof_inheritance_full_generation[allof_shared_models]
  '''
  # Generated by pyoas — do not edit manually. spec: bc325c1c
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Animal(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=..., description='Animal name')
  
  
  '''
# ---
# name: test_generate_circular_ref[circular_ref_trees]
  '''
  # Generated by pyoas — do not edit manually. spec: 6f3150dd
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class TreeNode(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      value: str | None = Field(default=None)
      children: list[TreeNode] | None = Field(default=None)
  
  
  '''
# ---
# name: test_generate_deprecated_fields[items_models_deprecated_fields]
  '''
  # Generated by pyoas — do not edit manually. spec: 10fb4dcf
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Item(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=..., description='Unique identifier')
      legacy_name: str = Field(default=..., description="Use 'name' instead", deprecated=True)
      name: str | None = Field(default=None)
      old_price: float | None = Field(default=None, deprecated=True)
      score: float = Field(default=0.0, deprecated=True)
  
  
  '''
# ---
# name: test_generate_discriminated[events_models]
  '''
  # Generated by pyoas — do not edit manually. spec: 3b840664
  from __future__ import annotations
  
  from typing import Annotated, Literal
  
  from pydantic import BaseModel, ConfigDict, Field, Discriminator, Tag
  
  
  class ClickEvent(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      type: Literal["click"] = Field(default=...)
      x: int = Field(default=...)
      y: int = Field(default=...)
  
  class KeyboardEvent(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      type: Literal["keyboard"] = Field(default=...)
      key: str = Field(default=...)
      modifiers: list[Literal["shift", "ctrl", "alt", "meta"]] | None = Field(default=None)
  
  Event = Annotated[Annotated[ClickEvent, Tag("click")] | Annotated[KeyboardEvent, Tag("keyboard")], Discriminator("type")]
  
  
  '''
# ---
# name: test_generate_enum_as_literal[pets_models_literal_enum]
  '''
  # Generated by pyoas — do not edit manually. spec: 076cafc7
  from __future__ import annotations
  
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Pet(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=...)
      status: PetStatus | None = Field(default=None, description='Status of the pet')
      priority: Priority | None = Field(default=None)
  
  PetStatus = Literal["available", "pending", "sold"]
  
  Priority = Literal[1, 2, 3]
  
  
  '''
# ---
# name: test_generate_enum_as_str_enum[pets_models_str_enum]
  '''
  # Generated by pyoas — do not edit manually. spec: 076cafc7
  from __future__ import annotations
  
  from enum import IntEnum, StrEnum
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Pet(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=...)
      status: PetStatus | None = Field(default=None, description='Status of the pet')
      priority: Priority | None = Field(default=None)
  
  class PetStatus(StrEnum):
      """Status of the pet"""
  
      AVAILABLE = 'available'
      PENDING = 'pending'
      SOLD = 'sold'
  
  class Priority(IntEnum):
      LOW = 1
      MEDIUM = 2
      HIGH = 3
  
  
  '''
# ---
# name: test_generate_generic_paginated[generic_paginated_fleet]
  '''
  # Generated by pyoas — do not edit manually. spec: c9851eb5
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Paginated
  
  
  class DriverListItem(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=...)
  
  PaginatedDriverListItem = Paginated[DriverListItem]
  
  Paginated_DriverListItem_ = PaginatedDriverListItem
  
  
  '''
# ---
# name: test_generate_generic_paginated[generic_paginated_shared]
  '''
  # Generated by pyoas — do not edit manually. spec: c9851eb5
  from __future__ import annotations
  
  from typing import Generic, TypeVar
  
  from pydantic import BaseModel, ConfigDict, Field
  
  T = TypeVar("T")
  
  
  class Paginated(BaseModel, Generic[T]):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      data: list[T] = Field(default=..., description='Page of results', title='Data')
      page: int = Field(default=..., description='Current page number (1-indexed)', title='Page')
      page_size: int = Field(default=..., alias='pageSize', description='Number of items per page', title='Pagesize')
      total: int = Field(default=..., description='Total number of matching records', title='Total')
  
  
  '''
# ---
# name: test_generate_generic_paginated[generic_paginated_users]
  '''
  # Generated by pyoas — do not edit manually. spec: c9851eb5
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Paginated
  
  
  class UserListItem(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      email: str = Field(default=...)
  
  PaginatedUserListItem = Paginated[UserListItem]
  
  Paginated_UserListItem_ = PaginatedUserListItem
  
  
  '''
# ---
# name: test_generate_inline_defs_31[inline_defs_31_orders]
  '''
  # Generated by pyoas — do not edit manually. spec: a62adbc5
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Label
  
  
  class Order(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      amount: float = Field(default=...)
      label: Label | None = Field(default=None)
  
  
  '''
# ---
# name: test_generate_inline_defs_31[inline_defs_31_pets]
  '''
  # Generated by pyoas — do not edit manually. spec: a62adbc5
  from __future__ import annotations
  
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Label
  
  
  class Tag(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str | None = Field(default=None)
      value: str | None = Field(default=None)
  
  class Pet(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=...)
      status: PetStatus | None = Field(default=None)
      tag: Tag | None = Field(default=None)
      label: Label | None = Field(default=None)
  
  PetStatus = Literal["active", "retired", "lost"]
  
  
  '''
# ---
# name: test_generate_inline_defs_31[inline_defs_31_shared]
  '''
  # Generated by pyoas — do not edit manually. spec: a62adbc5
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Label(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      key: str = Field(default=...)
      display: str | None = Field(default=None)
  
  
  '''
# ---
# name: test_generate_inline_schemas[reports_models_inline_schemas]
  '''
  # Generated by pyoas — do not edit manually. spec: 8579ead8
  from __future__ import annotations
  
  import datetime
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class CreateReportBody(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      title: str = Field(default=...)
      max_rows: int | None = Field(default=None)
  
  class CreateReportResponse(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      title: str = Field(default=...)
      created_at: datetime.datetime | None = Field(default=None)
  
  
  '''
# ---
# name: test_generate_multi_tag[orders_models]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  import uuid
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Address
  
  
  class OrderRead(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: uuid.UUID = Field(default=...)
      user_id: uuid.UUID = Field(default=..., alias='userId')
      total: float = Field(default=...)
      status: Literal["pending", "confirmed", "shipped", "delivered", "cancelled"] = Field(default='pending')
      shipping_address: Address | None = Field(default=None, alias='shippingAddress', description='A postal address (shared schema)')
  
  class OrderWrite(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      user_id: uuid.UUID = Field(default=..., alias='userId')
      total: float = Field(default=...)
      status: Literal["pending", "confirmed", "shipped", "delivered", "cancelled"] = Field(default='pending')
      shipping_address: Address | None = Field(default=None, alias='shippingAddress', description='A postal address (shared schema)')
  
  Order = OrderRead
  
  
  '''
# ---
# name: test_generate_multi_tag[shared_models]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class Address(BaseModel):
      """A postal address (shared schema)"""
  
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      street: str | None = Field(default=None)
      city: str | None = Field(default=None)
      country: str | None = Field(default=None)
  
  
  '''
# ---
# name: test_generate_multi_tag[users_models]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  import uuid
  
  from pydantic import BaseModel, ConfigDict, Field
  
  from .shared import Address
  
  
  class UserRead(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: uuid.UUID = Field(default=...)
      email: str = Field(default=...)
      first_name: str | None = Field(default=None, alias='firstName')
      last_name: str | None = Field(default=None, alias='lastName')
      address: Address | None = Field(default=None, description='A postal address (shared schema)')
  
  class UserWrite(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      email: str = Field(default=...)
      first_name: str | None = Field(default=None, alias='firstName')
      last_name: str | None = Field(default=None, alias='lastName')
      address: Address | None = Field(default=None, description='A postal address (shared schema)')
  
  User = UserRead
  
  
  '''
# ---
# name: test_generate_no_tags[default_models]
  '''
  # Generated by pyoas — do not edit manually. spec: 755f55c6
  from __future__ import annotations
  
  from typing import Annotated
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class ItemRead(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=...)
      description: str | None = Field(default=None)
      price: Annotated[float | None, Field(ge=0, default=None)]
  
  class ItemWrite(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=...)
      description: str | None = Field(default=None)
      price: Annotated[float | None, Field(ge=0, default=None)]
  
  class CreateItemRequest(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=...)
      description: str | None = Field(default=None)
      price: Annotated[float | None, Field(ge=0, default=None)]
  
  Item = ItemRead
  
  
  '''
# ---
# name: test_generate_petstore_30[pets_models_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 9c69daa7
  from __future__ import annotations
  
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class PetList(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      items: list[Pet] = Field(default=...)
      total: int | None = Field(default=None)
  
  class PetRead(BaseModel):
      """A pet in the store"""
  
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=..., description="The pet's name")
      status: Literal["available", "pending", "sold"] = Field(default='available')
      tag: str | None = Field(default=None)
  
  class PetWrite(BaseModel):
      """A pet in the store"""
  
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=..., description="The pet's name")
      status: Literal["available", "pending", "sold"] = Field(default='available')
      tag: str | None = Field(default=None)
  
  class CreatePetRequest(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=...)
      tag: str | None = Field(default=None)
  
  Pet = PetRead
  
  
  '''
# ---
# name: test_generate_petstore_30[root_init_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 9c69daa7
  from __future__ import annotations
  
  from .pets import (
      CreatePetRequest as CreatePetRequest,
      Pet as Pet,
      PetList as PetList,
      PetRead as PetRead,
      PetWrite as PetWrite,
  )
  
  '''
# ---
# name: test_generate_petstore_30[store_models_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 9c69daa7
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  
  '''
# ---
# name: test_generate_petstore_31[pets_models_31]
  '''
  # Generated by pyoas — do not edit manually. spec: 4baf2ee8
  from __future__ import annotations
  
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class PetList(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      items: list[Pet] = Field(default=...)
      total: int | None = Field(default=None)
  
  class PetRead(BaseModel):
      """A pet in the store"""
  
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      name: str = Field(default=..., description="The pet's name")
      tag: str | None = Field(default=None)
      status: Literal["available", "pending", "sold"] = Field(default='available')
  
  class PetWrite(BaseModel):
      """A pet in the store"""
  
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=..., description="The pet's name")
      tag: str | None = Field(default=None)
      status: Literal["available", "pending", "sold"] = Field(default='available')
  
  class CreatePetRequest(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      name: str = Field(default=...)
      tag: str | None = Field(default=None)
  
  Pet = PetRead
  
  
  '''
# ---
# name: test_generate_read_write[documents_models_read_write]
  '''
  # Generated by pyoas — do not edit manually. spec: 910e0033
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class DocumentRead(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int | None = Field(default=None, description='Server-assigned ID')
      title: str = Field(default=..., description='Document title')
  
  class DocumentWrite(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      title: str = Field(default=..., description='Document title')
      secret: str | None = Field(default=None, description='Write-only secret token')
  
  Document = DocumentRead
  
  
  '''
# ---
# name: test_generate_webhooks_produces_models[subscriptions_models_webhooks]
  '''
  # Generated by pyoas — do not edit manually. spec: bf0ae1b6
  from __future__ import annotations
  
  from typing import Literal
  
  from pydantic import BaseModel, ConfigDict, Field
  
  
  class CreateSubscriptionRequest(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      plan: str = Field(default=...)
  
  class SubscriptionRead(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      id: int = Field(default=...)
      status: Literal["active", "cancelled", "expired"] = Field(default=...)
  
  class SubscriptionWrite(BaseModel):
      model_config = ConfigDict(
          extra="forbid",
          frozen=False,
          populate_by_name=True,
      )
  
      status: Literal["active", "cancelled", "expired"] = Field(default=...)
  
  class SubscriptionEvent(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      subscription_id: int = Field(default=...)
      event_type: Literal["created", "cancelled", "expired"] = Field(default=...)
  
  Subscription = SubscriptionRead
  
  
  '''
# ---
# name: test_unique_items_as_set_false_emits_list_with_validator[unique_items_list_with_validator]
  '''
  # Generated by pyoas — do not edit manually. spec: 1095a4a8
  from __future__ import annotations
  
  from pydantic import BaseModel, ConfigDict, Field, model_validator
  
  
  class Resource(BaseModel):
      model_config = ConfigDict(
          extra="ignore",
          frozen=False,
          populate_by_name=True,
      )
  
      tags: list[str] = Field(default=..., description='Unique string tags')
      ids: list[int] | None = Field(default=None, description='Unique integer IDs')
      name: str | None = Field(default=None)
      @model_validator(mode="after")
      def _deduplicate_unique_items(self) -> "Resource":
          """Preserve list type for JSON serialisation while enforcing uniqueness."""
          if isinstance(self.tags, list):
              _seen: list = []
              for _item in self.tags:
                  if _item not in _seen:
                      _seen.append(_item)
              object.__setattr__(self, "tags", _seen)
          if isinstance(self.ids, list):
              _seen: list = []
              for _item in self.ids:
                  if _item not in _seen:
                      _seen.append(_item)
              object.__setattr__(self, "ids", _seen)
          return self
  
  
  '''
# ---
